--- a/ChatSocketWebClient/css/main.css
+++ b/ChatSocketWebClient/css/main.css
@@ -3,7 +3,7 @@ main {
   display: flex;
   flex-flow: column;
   gap: 2rem;
-  margin: 2rem 4rem;
+  margin: 2rem 4rem 0 4rem;
   height: 100%;
 }
 
