--- a/ChatSocketWebClient/css/style.css
+++ b/ChatSocketWebClient/css/style.css
@@ -24,15 +24,15 @@ html {
     'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 16px;
   color: var(--fg);
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 body {
   display: flex;
   flex-flow: column;
   margin: 0 auto;
-  max-width: 100em;
-  min-height: 100vh;
+  max-width: 1600px;
+  min-height: 100dvh;
 }
 
 footer {
